Some refactors.